--- a/views/game_view.haml
+++ b/views/game_view.haml
@@ -12,8 +12,8 @@
       %canvas{:class=>"chip", :id=>"rectlayer"}
       %canvas{:class=>"chip", :id=>"mouselayer"}
       %canvas{:class=>"chip", :id=>"hitbuffer"}
-    %button{:class=>"chip", :onclick=>"javascript:submit(#{@user.id},#{@tile.id});"} Submit #{@tile.id}
+    %button{:class=>"chip", :onclick=>"javascript:submit(#{@user.id},#{@sub.id});"} Save #{@tile.id}
 %script{:type => "text/javascript", :src => "/rectdraw.js"}
 %script
   setup();
-    
+  loadTile(#{@user.id},#{@sub.id})
